# ai-orchestrator

./: .env.example  .gitignore  COMMANDS.md  README.md  debug_init.py  pyproject.toml
data/: events.jsonl
orchestrator/: __main__.py  approval_store.py  bot.py  checkpoint.py  command_service.py  config.py  core_commands.py  dashboard_client.py  event_logger.py  handlers.py  pipeline.py  projects.json  projects.json.example  scheduler.py  security.py  state_sync.py  system_monitor.py  tmux_manager.py
orchestrator/ai/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py
orchestrator/api/: __init__.py  app.py  approval_models.py  approval_routes.py  auth.py  command_models.py  command_routes.py  events.py  models.py  registry.py  routes.py  schemas.py
tests/: test_api_approvals.py  test_api_auth.py  test_api_checkpoints.py  test_api_commands.py  test_api_endpoints.py  test_api_health.py  test_api_integration.py  test_api_pipelines.py  test_api_projects.py  test_api_status.py  test_api_websocket.py  test_approval_events.py  test_approval_store.py  test_command_service.py  test_core_commands.py  test_dashboard_client.py  test_event_logger.py  test_handlers.py  test_pipeline_events.py  test_race_condition.py
